manifests/apps/hermes-agent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: hermes-agent
    app.kubernetes.io/name: hermes-agent
  name: hermes-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: hermes-agent
      app.kubernetes.io/name: hermes-agent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hermes-agent
        app.kubernetes.io/name: hermes-agent
    spec:
      containers:
      - image: nousresearch/hermes-agent:v2026.8.31 # renovate: docker=nousresearch/hermes-agent
        imagePullPolicy: IfNotPresent
        name: hermes-agent
        stdin: true # Required for first-run setup
        tty: true   # Required for first-run setup
        ports:
        - containerPort: 8642
          name: api
          protocol: TCP
        - containerPort: 9119
          name: dashboard
          protocol: TCP
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: dashboard
        readinessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: dashboard
        resources:
          requests:
            cpu: 100m
            memory: 2048Mi # Required for browser tasks
        securityContext: {}
        volumeMounts:
        - mountPath: /opt/data
          name: data
      serviceAccountName: hermes-agent
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: hermes-agent-data
